Search engine updates and fix problem #3, try to implement french language, and changes over advertising
the changes over advertising are not finished yet, it is on progress

--- a/WindowsPhone/RecipeHubApp/RecipeHubApp/AppResx.es-ES.resx
+++ b/WindowsPhone/RecipeHubApp/RecipeHubApp/AppResx.es-ES.resx
@@ -204,4 +204,10 @@
   <data name="AlarmNotFoundKey" xml:space="preserve">
     <value>La aplicacion no pudo encontrar ninguna alarma asociada a esta receta</value>
   </data>
+  <data name="AddMoreKey" xml:space="preserve">
+    <value>buscar mas</value>
+  </data>
+  <data name="SystemBusyMessageKey" xml:space="preserve">
+    <value>la aplicacion esta ocupado recuperando los resultados de la busqueda por favor espere.</value>
+  </data>
 </root>
