commit for version 1.5.0
this commit is to reflect more less changes over the app versions, this
has changes like adding of adrotator (much heavier) and integrating MS
translate engine

--- a/WindowsPhone/RecipeHubApp/RecipeHubApp/AppResx.es-ES.resx
+++ b/WindowsPhone/RecipeHubApp/RecipeHubApp/AppResx.es-ES.resx
@@ -210,4 +210,7 @@
   <data name="SystemBusyMessageKey" xml:space="preserve">
     <value>la aplicacion esta ocupado recuperando los resultados de la busqueda por favor espere.</value>
   </data>
+  <data name="WaitPleaseKey" xml:space="preserve">
+    <value>Espere un momento por favor</value>
+  </data>
 </root>
