Fix bug #13, implementing translation engine
Forks number node was messed up, cambios para consumir paginas de
foxplay, settings page updated, mejora en la implementacion de alarmas

--- a/WindowsPhone/RecipeHubApp/RecipeHubApp/AppResx.es-ES.resx
+++ b/WindowsPhone/RecipeHubApp/RecipeHubApp/AppResx.es-ES.resx
@@ -213,4 +213,7 @@
   <data name="WaitPleaseKey" xml:space="preserve">
     <value>Espere un momento por favor</value>
   </data>
+  <data name="SearchEngineKey" xml:space="preserve">
+    <value>Motores de Busqueda</value>
+  </data>
 </root>
