--- a/WindowsPhone/RecipeHubApp/RecipeHubApp/AppResx.fr.resx
+++ b/WindowsPhone/RecipeHubApp/RecipeHubApp/AppResx.fr.resx
@@ -215,4 +215,7 @@
   <data name="WaitPleaseKey" xml:space="preserve">
     <value>esper le moment</value>
   </data>
+  <data name="SearchEngineKey" xml:space="preserve">
+    <value />
+  </data>
 </root>
